<resources>
    <string name="app_name">Parstagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="alr_have">Already have an account?</string>
    <string name="login_period">Log in.</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_directions">Please input a username and password to create a new account.</string>
    <string name="take_photo">Take Photo</string>
    <string name="post">Post</string>
    <string name="caption">Caption</string>
    <string name="return_to_feed">Return to Feed</string>
    <string name="profile">Profile</string>
    <string name="create">Create</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log out</string>
</resources>